# PaperShelf

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Dockerfile.dev  FRONTEND_MIGRATION.md  README.md  chat_history.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  README.md  nginx.conf  package.json  test.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Home.css  Home.js  Navbar.js  Query.css  Query.js  Upload.css  Upload.js
papershelf/: __init__.py  main.py
papershelf/api/: __init__.py  app.py
papershelf/db/: __init__.py  chat_history.py  vector_store.py
papershelf/ingest/: __init__.py  embedding_generator.py  pdf_processor.py
papershelf/query/: __init__.py  rag_engine.py
papershelf/static/: index.html  query.html  upload.html
papershelf/utils/: __init__.py  config.py  pdf_generator.py
scripts/: README.md  docker.sh  run_dev.sh  run_tests.sh
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_api.py
tests/db/: __init__.py  test_vector_store.py
tests/ingest/: __init__.py  test_embedding_generator.py  test_pdf_processor.py
tests/query/: __init__.py  test_rag_engine.py
tests/utils/: __init__.py  test_config.py
